--- a/src/layout/main/header/Header.module.css
+++ b/src/layout/main/header/Header.module.css
@@ -10,6 +10,9 @@
 .scroll__header {
   box-shadow: 0 4px 4px hsla(0, 4%, 4%, 0.3);
 }
+.light__scroll__header {
+  box-shadow: 0 2px 4px hsla(0, 0%, 1%, 0.1);
+}
 
 nav {
   height: var(--header-height);
